--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "flag-icons": "^7.2.1",
+    "form-data": "^4.0.0",
+    "idb": "^8.0.0",
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
