--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "flag-icons": "^7.2.1",
     "form-data": "^4.0.0",
     "idb": "^8.0.0",
-    "next": "14.1.4",
+    "next": "^14.1.4",
     "react": "^18",
     "react-dom": "^18",
     "react-select": "^5.8.0"
